--- a/XCTInputValidationCodeBehindSample/MainPage.xaml
+++ b/XCTInputValidationCodeBehindSample/MainPage.xaml
@@ -1,38 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              x:Class="XCTInputValidationCodeBehindSample.MainPage">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <xct:InvertedBoolConverter x:Key="invertBoolConverter" />
-        </ResourceDictionary>
-    </ContentPage.Resources>
 
     <StackLayout>
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Input Validation Sample" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
-        <Entry Placeholder="Email" Text="{Binding Email}">
-            <Entry.Behaviors>
-                <xct:MultiValidationBehavior x:Name="myValidation">
-                    <xct:EmailValidationBehavior x:Name="myEmailValidation" xct:MultiValidationBehavior.Error="Email not valid" Flags="ValidateOnUnfocusing"/>
-                </xct:MultiValidationBehavior>
-            </Entry.Behaviors>
-        </Entry>
-
-        <Button Text="Valid (MultiBindingBehavior)" Clicked="Button_Clicked"></Button>
-        <Button Text="Valid (EmailValidationBehavior)" Clicked="Button_Clicked_1"></Button>
-
-        <Entry Placeholder="Email" Text="{Binding Email}">
-            <Entry.Behaviors>
-                <xct:MultiValidationBehavior>
-                    <xct:EmailValidationBehavior IsValid="{Binding EmailValid}" Flags="ValidateOnUnfocusing"/>
-                </xct:MultiValidationBehavior>
-            </Entry.Behaviors>
-        </Entry>
-
-        <Label Text="Email not valid" TextColor="Red" IsVisible="{Binding EmailValid, Converter={StaticResource invertBoolConverter}}" />
+        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
+        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
+        <Label FontSize="16" Padding="30,24,30,0">
+            <Label.FormattedText>
+                <FormattedString>
+                    <FormattedString.Spans>
+                        <Span Text="Learn more at "/>
+                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
+                    </FormattedString.Spans>
+                </FormattedString>
+            </Label.FormattedText>
+        </Label>
     </StackLayout>
 
 </ContentPage>
