--- a/XCTInputValidationCodeBehindSample/MainPage.xaml
+++ b/XCTInputValidationCodeBehindSample/MainPage.xaml
@@ -1,24 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              x:Class="XCTInputValidationCodeBehindSample.MainPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <xct:InvertedBoolConverter x:Key="invertBoolConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <StackLayout>
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+            <Label Text="Input Validation Sample" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
+        <Entry Placeholder="Email" Margin="20">
+            <Entry.Behaviors>
+                <xct:MultiValidationBehavior x:Name="myMultiValidation">
+
+                    <xct:EmailValidationBehavior x:Name="myEmailValidation"  Flags="ValidateOnUnfocusing" xct:MultiValidationBehavior.Error="Email is not valid"/>
+
+                </xct:MultiValidationBehavior>
+            </Entry.Behaviors>
+        </Entry>
+
+        <Button Text="Validate (MultiValidationBehavior)" Clicked="Button_Clicked" />
+        <Button Text="Validate (EmailValidationBehavior)" Clicked="Button_Clicked_1" />
+
+        <Entry Placeholder="Email" Margin="20">
+            <Entry.Behaviors>
+               <xct:EmailValidationBehavior Flags="ValidateOnUnfocusing" IsValid="{Binding EmailValid} "/>
+            </Entry.Behaviors>
+        </Entry>
+
+        <Label Text="Email not valid" TextColor="Red" IsVisible="{Binding EmailValid, Converter={StaticResource invertBoolConverter}}" />
     </StackLayout>
 
 </ContentPage>
